2008-10-14    <neal@bcn.boulder.co.us>

	* makeauditunits.py (parse_xml_crystal): 
	finally, create EL and EV database records, now that I can test those
	if xml file is "cumulative.xml", use parent directory name
	
2008-10-13    <neal@bcn.boulder.co.us>

	* makeauditunits.py (main): 
	define settings module without environment var DJANGO_SETTINGS_MODULE
	
2008-10-10    <neal@bcn.boulder.co.us>

	add setup.py and ez_setup.py
	* electionaudit/templates/electionaudit/report.html: 
	don't use writing-mode: tb-rl on vote totals
	* audittools/settings.py: 
	comment out 'lukeplant_me_uk.django.validator' and 'django_extensions'
	Improve documentation
	
2008-10-09    <neal@bcn.boulder.co.us>

	* electionaudit/templates/electionaudit/report.html: 
	sort columns alphabetically to deal with variable order, mismatches
	
2008-10-08    <neal@bcn.boulder.co.us>

	* audittools/templates/base.html: 
	only show /validator/ if in debug mode
	
2008-10-08    <neal@bcn.boulder.co.us>

	Version 0.7.0
	Change from GPLv3 to MIT license for wider uptake, less complication

	* makeauditunits.py (parse_csv): 
	Finish & refactor code to combine ballots for privacy for csv
	remove models.AuditUnit: util.AuditUnit does what we really want
	finally remove models.Batch.cumulative - we combine when we read in
	* electionaudit/urls.py: 
	fix how settings are imported to use generic method so validator works
	 with ./manage.py runserver_plus --settings settings_debug
	* electionaudit/templates/electionaudit/reports.html: 
	fix some bad html
	
2008-10-08    <neal@bcn.boulder.co.us>

	* electionaudit/templates/electionaudit/index.html: 
	Add introduction to home page
	
2008-10-07    <neal@bcn.boulder.co.us>

	* electionaudit/util.py (Pipe.push): 
	Write util module with AuditUnit class to combine them for privacy
	Add pushAuditUnit and class Push, ready to refactor makeauditunits
	
2008-10-06    <neal@bcn.boulder.co.us>

	* audittools/templates/404.html: 
	add 404.html and 500.html